[package]
name = "rtaudio-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["coreaudio", "alsa", "pulse", "oss", "wasapi", "ds"]
coreaudio = []
jack_macos = []
alsa = []
jack_linux = []
pulse = []
oss = []
asio = []
wasapi = []
ds = []

[dependencies]

[build-dependencies]
bindgen = "0.64"
cmake = "0.1"