[package]
name = "rtaudio-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["coreaudio", "alsa", "pulse", "oss", "wasapi", "ds"]
coreaudio = []
alsa = []
jack_linux = []
pulse = []
oss = []
asio = []
wasapi = []
ds = []

[dependencies]

[build-dependencies]
bindgen = "0.65"
cmake = "0.1"

[target.'cfg(any(target_os="linux", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.build-dependencies]
pkg-config = "0.3"